<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.is.ps.addameer.HomeFragment"
    android:background="#f8f8f8">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="0"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_height="24dp"
                    app:srcCompat="@mipmap/home_last_news"
                    android:id="@+id/imageView32"
                    android:layout_width="24dp"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:text="@string/lastnews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastnews"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textColor="#606060"
                    android:textColorHighlight="#606060"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></LinearLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/last_newss_trim"
                >

            </android.support.v4.view.ViewPager>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@mipmap/home_last_catagories"
                    android:id="@+id/imageView33"
                    android:layout_marginEnd="5dp" />

                <TextView
                    android:text="@string/catagories2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/catagories"
                    android:layout_weight="1"
                    android:textColor="#606060"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/last_newss_trim"
                android:layout_marginBottom="10dp">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lst2"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@mipmap/home_vote"
                    android:id="@+id/imageView34"
                    android:layout_marginEnd="5dp" />

                <TextView
                    android:text="@string/vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vote"
                    android:layout_gravity="center_vertical"
                    android:textColor="#606060"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/last_newss_trim"
                >

                <TextView
                    android:textAlignment="viewStart"
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/question"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ListVote"
                        android:layout_marginBottom="5dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
